# DataPlataform

./: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  pyproject.toml  settings.toml
server/: __init__.py  app.py  settings.toml
server/back/eyestorm/: function.py
server/blueprints/: configuration.py  description.md  views.py
server/blueprints/api/: __init__.py  main.py
server/blueprints/site/: __init__.py  main.py
server/blueprints/site/js/: central_calendario
server/blueprints/site/templates/: central.html  central_calendario.html  central_entregas.html  central_summary.html  eyestorm.html  home.html
server/blueprints/templates/: base.html  eyestorm.html
server/ext/: apperance.py  configuration.py  database.py  login.py
src/: index.html  styles.css  theme.scss
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/calendario/: calendario.module.ts
src/app/entregas/: entregas-routing.module.ts  entregas.component.css  entregas.component.html  entregas.component.ts  entregas.module.ts
src/app/entregas/entrega/: entrega.component.html  entrega.component.ts  forms.service.ts
src/app/entregas/models/: entrega.model.ts
src/app/header/: header.component.css  header.component.html  header.component.ts
src/app/home/: home.component.html
src/app/material/: material.module.ts
src/app/rules-templates/: rules-templates-routing.module.ts  rules-templates.component.html  rules-templates.component.ts  rules-templates.module.ts
(+21 files in other folders)
